--- a/RunCoin/StroyBoards/Base.lproj/LaunchScreen.storyboard
+++ b/RunCoin/StroyBoards/Base.lproj/LaunchScreen.storyboard
@@ -5,6 +5,8 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,18 +19,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="runCoinLogo" translatesAutoresizingMaskIntoConstraints="NO" id="B1o-eu-CuE">
-                                <rect key="frame" x="70" y="100" width="235" height="235"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sYb-IU-KUv" userLabel="Bottom View Container">
+                                <rect key="frame" x="0.0" y="343.5" width="375" height="323.5"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hPR-hN-yTM" userLabel="Top View Container">
+                                <rect key="frame" x="0.0" y="20" width="375" height="323.5"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="runCoinLogo" translatesAutoresizingMaskIntoConstraints="NO" id="B1o-eu-CuE">
+                                        <rect key="frame" x="70" y="44.5" width="235" height="235"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="B1o-eu-CuE" secondAttribute="height" multiplier="1:1" id="E8O-b5-N60"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="235" id="UAM-pS-2aK"/>
-                                    <constraint firstAttribute="width" constant="235" id="jx8-oc-HcC"/>
+                                    <constraint firstItem="B1o-eu-CuE" firstAttribute="centerX" secondItem="hPR-hN-yTM" secondAttribute="centerX" id="EWx-Nd-OOM"/>
+                                    <constraint firstItem="B1o-eu-CuE" firstAttribute="centerY" secondItem="hPR-hN-yTM" secondAttribute="centerY" id="Ez7-4C-fyn"/>
+                                    <constraint firstItem="B1o-eu-CuE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="hPR-hN-yTM" secondAttribute="top" constant="10" id="vBc-RC-V4I"/>
                                 </constraints>
-                            </imageView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="B1o-eu-CuE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Qdc-4V-JLD"/>
-                            <constraint firstItem="B1o-eu-CuE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="QyB-GH-DoK"/>
+                            <constraint firstItem="hPR-hN-yTM" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="20" id="5iF-FV-PfV"/>
+                            <constraint firstItem="hPR-hN-yTM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8Bf-kj-DzH"/>
+                            <constraint firstItem="sYb-IU-KUv" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="EAg-pa-SpZ"/>
+                            <constraint firstItem="sYb-IU-KUv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="EdA-5i-eaQ"/>
+                            <constraint firstItem="hPR-hN-yTM" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.5" id="Fhw-D8-ZtP"/>
+                            <constraint firstItem="hPR-hN-yTM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Qjb-gG-H5o"/>
+                            <constraint firstItem="sYb-IU-KUv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="c7m-Xr-tQA"/>
+                            <constraint firstItem="sYb-IU-KUv" firstAttribute="height" secondItem="hPR-hN-yTM" secondAttribute="height" id="oKl-2D-9KA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
